correcciones
Co-authored-by: Miranda Rossi <mirossi@frba.utn.edu.ar>