@@ -9,6 +9,7 @@ import grupo5.incentivos.models.entities.donante.CategoriaDonante;
 import grupo5.incentivos.models.entities.donante.DonanteIncentivos;
 import grupo5.incentivos.models.entities.donante.EventoDonacion;
 import java.time.LocalDate;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -23,12 +24,11 @@ class MisionesTest {
 
   private EventoDonacion eventoEn(int anio, int mes) {
     return EventoDonacion.builder()
-        .donacionId(1L)
-        .fecha(LocalDate.of(anio, mes, 15))
-        .exitosa(true)
-        .cantidadBienes(5)
-        .subcategoria("arroz")
-        .build();
+            .donacionId(1L)
+            .fecha(LocalDate.of(anio, mes, 15))
+            .cantidadBienes(5)
+            .categorias(List.of("arroz"))
+            .build();
   }
 
   @Test
@@ -73,37 +73,33 @@ class MisionesTest {
     MisionCompletitud mision = new MisionCompletitud(CategoriaDonante.COLABORADOR, 3);
 
     EventoDonacion e1 =
-        EventoDonacion.builder()
-            .donacionId(1L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("arroz")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(1L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(1)
+                    .categorias(List.of("arroz"))
+                    .build();
     EventoDonacion e2 =
-        EventoDonacion.builder()
-            .donacionId(2L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("ropa")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(2L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(1)
+                    .categorias(List.of("ropa"))
+                    .build();
     EventoDonacion e3 =
-        EventoDonacion.builder()
-            .donacionId(3L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("arroz")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(3L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(1)
+                    .categorias(List.of("arroz"))
+                    .build();
     EventoDonacion e4 =
-        EventoDonacion.builder()
-            .donacionId(4L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("sillas")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(4L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(1)
+                    .categorias(List.of("sillas"))
+                    .build();
 
     mision.evaluarProgreso(donante, e1);
     mision.evaluarProgreso(donante, e2);
@@ -119,13 +115,12 @@ class MisionesTest {
     MisionHabilDonador mision = new MisionHabilDonador(CategoriaDonante.SOSTENEDOR, 50);
 
     EventoDonacion evento =
-        EventoDonacion.builder()
-            .donacionId(1L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(55)
-            .subcategoria("fideos")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(1L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(55)
+                    .categorias(List.of("fideos"))
+                    .build();
 
     mision.evaluarProgreso(donante, evento);
 
@@ -138,13 +133,12 @@ class MisionesTest {
 
     for (int i = 0; i < 10; i++) {
       EventoDonacion evento =
-          EventoDonacion.builder()
-              .donacionId((long) i)
-              .fecha(LocalDate.now())
-              .exitosa(true)
-              .cantidadBienes(5)
-              .subcategoria("fideos")
-              .build();
+              EventoDonacion.builder()
+                      .donacionId((long) i)
+                      .fecha(LocalDate.now())
+                      .cantidadBienes(5)
+                      .categorias(List.of("fideos"))
+                      .build();
       mision.evaluarProgreso(donante, evento);
     }
 
@@ -154,29 +148,12 @@ class MisionesTest {
   @Test
   void donacionesExitosas_soloDeberiaContarExitosas() {
     MisionDonacionesExitosas mision =
-        new MisionDonacionesExitosas(CategoriaDonante.TRANSFORMADOR, 3);
+            new MisionDonacionesExitosas(CategoriaDonante.TRANSFORMADOR, 3);
 
-    EventoDonacion exitosa =
-        EventoDonacion.builder()
-            .donacionId(1L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("x")
-            .build();
-    EventoDonacion fallida =
-        EventoDonacion.builder()
-            .donacionId(2L)
-            .fecha(LocalDate.now())
-            .exitosa(false)
-            .cantidadBienes(1)
-            .subcategoria("x")
-            .build();
-
-    mision.evaluarProgreso(donante, exitosa);
-    mision.evaluarProgreso(donante, fallida);
-    mision.evaluarProgreso(donante, exitosa);
-    mision.evaluarProgreso(donante, exitosa);
+    mision.evaluarProgresoExitoso(donante);
+    // donacion no exitosa: no se llama evaluarProgresoExitoso
+    mision.evaluarProgresoExitoso(donante);
+    mision.evaluarProgresoExitoso(donante);
 
     assertTrue(mision.isCompletada());
     assertEquals(3, mision.getProgresoActual());
@@ -187,16 +164,15 @@ class MisionesTest {
     MisionDonacionesExitosas mision = new MisionDonacionesExitosas(CategoriaDonante.COLABORADOR, 4);
 
     EventoDonacion exitosa =
-        EventoDonacion.builder()
-            .donacionId(1L)
-            .fecha(LocalDate.now())
-            .exitosa(true)
-            .cantidadBienes(1)
-            .subcategoria("x")
-            .build();
+            EventoDonacion.builder()
+                    .donacionId(1L)
+                    .fecha(LocalDate.now())
+                    .cantidadBienes(1)
+                    .categorias(List.of("x"))
+                    .build();
 
-    mision.evaluarProgreso(donante, exitosa);
-    mision.evaluarProgreso(donante, exitosa);
+    mision.evaluarProgresoExitoso(donante);
+    mision.evaluarProgresoExitoso(donante);
 
     assertEquals(50, mision.getPorcentajeProgreso());
     assertEquals(2, mision.getDistanciaAlObjetivo());
@@ -206,8 +182,8 @@ class MisionesTest {
   void mision_deberiaOtorgarInsigniaAlCompletarse() {
     MisionRacha racha = new MisionRacha(CategoriaDonante.COLABORADOR, 2);
     grupo5.incentivos.models.entities.insignias.Insignia insignia =
-        new grupo5.incentivos.models.entities.insignias.Insignia(
-            "Perseverante", "2 meses seguidos", "/img.png");
+            new grupo5.incentivos.models.entities.insignias.Insignia(
+                    "Perseverante", "2 meses seguidos", "/img.png");
     racha.setInsignia(insignia);
 
     racha.evaluarProgreso(donante, eventoEn(2026, 1));
@@ -216,6 +192,6 @@ class MisionesTest {
     assertTrue(racha.isCompletada());
     assertNotNull(racha.getFechaCompletada());
     assertEquals(1, donante.getInsignias().size());
-    assertEquals("Perseverante", donante.getInsignias().get(0).getNombre());
+    assertEquals("Perseverante", donante.getInsignias().getFirst().getNombre());
   }
 }
